[project]
name = "option-pricing"
version = "0.1.0"
description = ""
authors = [
    {name = "aldensmu",email = "aldenhjz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "numba (>=0.62.1,<0.63.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
